--- a/index.html
+++ b/index.html
@@ -6,10 +6,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookmark Manager</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="header-section">
+        <h2 class="title">Manage Your Bookmarks</h2>
+    </div>
+    <!-- Add Bookmark Button -->
+    <div class="add-bookmark">
+        <h1>Add Bookmark</h1>
+    </div>
 
+    <!-- Bookmarks -->
+    <div class="container" id="bookmarks-container">
+        <div class="item">
+            <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
+            <div class="name">
+                <img src="favicon.png" alt="Favicon">
+                <a href="http://prothomalo.com" target="_blank">Prothom Alo</a>
+            </div>
+        </div>
+        <div class="item">
+            <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
+            <div class="name">
+                <img src="favicon.png" alt="Favicon">
+                <a href="http://prothomalo.com" target="_blank">Prothom Alo</a>
+            </div>
+        </div>
+        <div class="item">
+            <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
+            <div class="name">
+                <img src="favicon.png" alt="Favicon">
+                <a href="http://prothomalo.com" target="_blank">Prothom Alo</a>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Script -->
+    <script src="script.js"></script>
 </body>
 
 </html>
