--- a/index.html
+++ b/index.html
@@ -45,6 +45,34 @@
         </div>
     </div>
 
+    <!-- Modal -->
+    <div class="modal-container show-modal" id="modal">
+        <div class="modal">
+            <i class="fas fa-times close-icon" id="close-modal"></i>
+            <div class="modal-header">
+                <h3>Add A Bookmark</h3>
+            </div>
+            <div class="modal-content">
+                <form id="bookmark-form">
+                    <!-- Website Name -->
+                    <div class="form-group">
+                        <label for="website-name" class="form-label">
+                            Website Name
+                        </label>
+                        <input type="text" class="form-input" id="website-name">
+                    </div>
+                    <!-- Website URL -->
+                    <div class="form-group">
+                        <label for="website-url" class="form-label">
+                            Website URL
+                        </label>
+                        <input type="text" class="form-input" id="website-url">
+                    </div>
+                    <button type="submit">SAVE BOOKMARK</button>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <!-- Script -->
     <script src="script.js"></script>
