--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <h2>[Under Development - Funnctionality will be added later.]</h2>
     <div class="header-section">
         <h2 class="title">Manage Your Bookmarks</h2>
     </div>
