Show & Hide Modal

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 
 <body>
-    <h2>[Under Development - Funnctionality will be added later.]</h2>
+    <!-- <h2>[Under Development - Funnctionality will be added later.]</h2> -->
     <div class="header-section">
         <h2 class="title">Manage Your Bookmarks</h2>
     </div>
     <!-- Add Bookmark Button -->
     <div class="add-bookmark">
-        <h1>Add Bookmark</h1>
+        <h1 id="show-modal">Add Bookmark</h1>
     </div>
 
     <!-- Bookmarks -->
@@ -47,7 +47,7 @@
     </div>
 
     <!-- Modal -->
-    <div class="modal-container show-modal" id="modal">
+    <div class="modal-container" id="modal">
         <div class="modal">
             <i class="fas fa-times close-icon" id="close-modal"></i>
             <div class="modal-header">
@@ -75,8 +75,9 @@
         </div>
     </div>
 
-    <!-- Script -->
-    <script src="script.js"></script>
+
 </body>
+<!-- Script -->
+<script src="script.js"></script>
 
 </html>
