--- a/index.html
+++ b/index.html
@@ -22,29 +22,7 @@
     </div>
 
     <!-- Bookmarks -->
-    <div class="container" id="bookmarks-container">
-        <div class="item">
-            <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
-            <div class="name">
-                <img src="favicon.png" alt="Favicon">
-                <a href="http://prothomalo.com" target="_blank">Prothom Alo</a>
-            </div>
-        </div>
-        <div class="item">
-            <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
-            <div class="name">
-                <img src="favicon.png" alt="Favicon">
-                <a href="http://prothomalo.com" target="_blank">Prothom Alo</a>
-            </div>
-        </div>
-        <div class="item">
-            <i class="fas fa-times" id="delete-bookmark" title="Delete Bookmark"></i>
-            <div class="name">
-                <img src="favicon.png" alt="Favicon">
-                <a href="http://prothomalo.com" target="_blank">Prothom Alo</a>
-            </div>
-        </div>
-    </div>
+    <div class="container" id="bookmarks-container"></div>
 
     <!-- Modal -->
     <div class="modal-container" id="modal">
